--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
-    implementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
+    implementation 'org.jsoup:jsoup:1.15.4'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
